--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -1,8 +1,37 @@
 {% extends 'base_auth.html' %}
+{% load static %}
 {% block content %}
-    <div class="card">
-      <div class="'card-body">
-          <h1>Register</h1>
-      </div>
+<div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+        <div class="card mt-5">
+            <div class="card-body">
+                 <div class="card-title py-3">
+                    <h4>Register for free</h4>
+                </div>
+                <form action="" method="post">
+                    <div class="form-group py-2">
+                        <input type="text" name="username" id="usernameField" class="form-control form-control-sm"
+                               placeholder="Username"/>
+                        <div class="valid-feedback">Valid.</div>
+                        <div class="invalid-feedback">Please fill out this field with alphanumerics.</div>
+                    </div>
+                    <div class="form-group py-2">
+                        <input type="password" name="password" id="passwordField" class="form-control form-control-sm"
+                               placeholder="Password"/>
+                    </div>
+                    <div class="form-group py-2">
+                        <input type="email" name="email" id="emailField" class="form-control form-control-sm"
+                               placeholder="E-mail"/>
+                        <small class="float-end py-2">SHOW</small>
+                    </div>
+                    <input type="submit" value="Register" class="btn btn-block btn-primary">
+                </form>
+            </div>
+
+            </div>
     </div>
-{% endblock %}
+    <div class="col-md-4"></div>
+</div>
+<script src="{% static 'js/register.js' %}"></script>
+{% endblock content%}
