--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -23,6 +23,8 @@
                     <div class="form-group py-2">
                         <input type="email" name="email" id="emailField" class="form-control form-control-sm"
                                placeholder="E-mail"/>
+                        <div class="valid-feedback">Valid.</div>
+                        <div class="invalid-feedback">Please fill out this field with correct email.</div>
                         <small class="float-end py-2">SHOW</small>
                     </div>
                     <input type="submit" value="Register" class="btn btn-block btn-primary">
