--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -17,15 +17,15 @@
                         <div class="invalid-feedback">Please fill out this field with alphanumerics.</div>
                     </div>
                     <div class="form-group py-2">
-                        <input type="password" name="password" id="passwordField" class="form-control form-control-sm"
-                               placeholder="Password"/>
-                    </div>
-                    <div class="form-group py-2">
                         <input type="email" name="email" id="emailField" class="form-control form-control-sm"
-                               placeholder="E-mail"/>
+                        placeholder="E-mail"/>
                         <div class="valid-feedback">Valid.</div>
                         <div class="invalid-feedback">Please fill out this field with correct email.</div>
-                        <small class="float-end py-2">SHOW</small>
+                    </div>
+                    <div class="form-group py-2">
+                        <input type="password" name="password" id="passwordField" class="form-control form-control-sm"
+                        placeholder="Password"/>
+                        <small class="float-end py-2 showPasswordToggle">SHOW</small>
                     </div>
                     <input type="submit" value="Register" class="btn btn-block btn-primary">
                 </form>
