--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -9,7 +9,9 @@
                  <div class="card-title py-3">
                     <h4>Register for free</h4>
                 </div>
-                <form action="" method="post">
+                <form action="{% url 'register' %}" method="post">
+                    {% csrf_token %}
+                    {% include 'partials/_messages.html' %}
                     <div class="form-group py-2">
                         <input type="text" name="username" id="usernameField" class="form-control form-control-sm"
                                placeholder="Username"/>
