added sending authentication mail for user registration

--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -14,7 +14,7 @@
                     {% include 'partials/_messages.html' %}
                     <div class="form-group py-2">
                         <input type="text" name="username" id="usernameField" class="form-control form-control-sm"
-                               placeholder="Username"/ value="{{ fieldValues.username }}">
+                               placeholder="Username" value="{{ fieldValues.username }}">
                         <div class="valid-feedback">Valid.</div>
                         <div class="invalid-feedback">Please fill out this field with alphanumerics.</div>
                     </div>
